--- a/Audio_Classification_on_Keyword_Spotting.ipynb
+++ b/Audio_Classification_on_Keyword_Spotting.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/oceanicdayi/wave2vec_learning/blob/main/Audio_Classification_on_Keyword_Spotting.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "g4JTHJ-IATho"
       },
       "source": [
@@ -41,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "5WMEawzyCEyG"
       },
@@ -62,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "L1532RVbJgQV"
       },
@@ -89,15 +79,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "Bkpk_JPlCww8"
       },
       "outputs": [],
       "source": [
-        "from huggingface_hub import notebook_login\n",
+        "import os\n",
+        "from huggingface_hub import login\n",
+        "from google.colab import userdata\n",
         "\n",
-        "notebook_login()"
+        "# 讀取 Colab 密鑰中的 Token\n",
+        "hf_token = userdata.get('HF')\n",
+        "\n",
+        "# 登入\n",
+        "login(token=hf_token)"
       ]
     },
     {
@@ -112,7 +108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "t7JEhLjDDcVd"
       },
@@ -171,11 +167,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "id": "fhVQU42BLd3p"
+        "id": "fhVQU42BLd3p",
+        "outputId": "0907f9c3-82d4-4fc5-c124-17408d0b134c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 332
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ImportError",
+          "evalue": "cannot import name 'load_metric' from 'datasets' (/usr/local/lib/python3.12/dist-packages/datasets/__init__.py)",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-2479815741.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mdatasets\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mload_dataset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mload_metric\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mImportError\u001b[0m: cannot import name 'load_metric' from 'datasets' (/usr/local/lib/python3.12/dist-packages/datasets/__init__.py)",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ],
+          "errorDetails": {
+            "actions": [
+              {
+                "action": "open_url",
+                "actionText": "Open Examples",
+                "url": "/notebooks/snippets/importing_libraries.ipynb"
+              }
+            ]
+          }
+        }
+      ],
       "source": [
         "from datasets import load_dataset, load_metric"
       ]
@@ -722,9 +746,7 @@
     "accelerator": "GPU",
     "colab": {
       "name": "Audio-Classification-on-Keyword-Spotting.ipynb",
-      "provenance": [],
-      "toc_visible": true,
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
