--- a/jiafu_Audio_Classification_on_Keyword_Spotting.ipynb
+++ b/jiafu_Audio_Classification_on_Keyword_Spotting.ipynb
@@ -52,6 +52,21 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# 1. 降級 wrapt 套件以解決 readonly attribute 衝突\n",
+        "!pip install \"wrapt<1.17\"\n",
+        "\n",
+        "# 2. 重新安裝 datasets 以確保相容性 (選用，但在 Colab 有時很有用)\n",
+        "!pip install -U datasets"
+      ],
+      "metadata": {
+        "id": "ggEdZ-mrrGi4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "NlArTG8KChJf"
